# garaga

./: .all-contributorsrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.template  .tool-versions  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  RSA2048_CAIRO_PLAN.md  Scarb.toml  bytecode_check.sh  costs_msm.txt  maturin.sh  protostar.toml  pyproject.toml  pytest.ini  readme.txt  requirements.txt  rewrite.sh  rns_crt_cairo_exact_demo.py  steps.sh
.cargo/: config.toml
.claude/commands/: bump-version.md  upgrade-cairo.md
.github/: .all-contributorsrc  CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/scripts/: declare_maintained_contracts.py  verify_contract.py  verify_contracts.py
.github/workflows/: CI.yml  cairo.yml  docs-sync.yml  e2e.yml  fustat.yml  hydra.yml  maturin.yml  node.yml  setup.yml  test.yml  wasm.yml
archive_tmp/: fp6.cairo
archive_tmp/bls12_381/: pairing.cairo
archive_tmp/bn254/: g1.cairo  pairing.cairo  pairing_final_exp.py  pairing_final_exp_circuit_generation.py  pairing_multi_miller.py
contracts/: bn254_precompiles.cairo
contracts/cairo_bn254/: bn254_precompiles.cairo  library.cairo
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PYPI_README.md  SECURITY.md  hints_document.md  hints_whitelist.md  representing_big_numbers.md  supported_curves.md
docs/benchmarks/: test_summary.json
docs/gitbook/: README.md  SUMMARY.md  building-powerful-applications.md  security.md  support.md  updating-these-docs.md
docs/plans/: 2026-03-06-falcon-512-design.md  2026-03-06-falcon-512-implementation.md
hydra/: algebra.py  definitions.py  extension_field_modulo_circuit.py  modulo_circuit.py  modulo_circuit_structs.py  poseidon_transcript.py
hydra/garaga/: __init__.py  algebra.py  curves.py  definitions.py  extension_field_modulo_circuit.py  modulo_circuit.py  modulo_circuit_structs.py  points.py  poseidon_transcript.py  rsa_rns.py  signature.py
hydra/hints/: bls-efficient.py  bls-finding-residues.ipynb  bls-full-examples.ipynb  bls-lambda-roots.ipynb  bls.ipynb  bls.py  ecip.py  extf_mul.py  frobenius.py  io.py  multi_miller_witness.py  neg_3.py  tower_backup.py
hydra/precompiled_circuits/: all_circuits.py  ec.py  final_exp.py  fixed_G2_groth16_circuits.py  honk.py  honk_circuits.py  multi_miller_loop.py  multi_pairing_check.py
src/: .tool-versions  Scarb.toml  algebra.py  benchmarks.py  curve.cairo  definitions.cairo  definitions.py  ec_ops.cairo  ecdsa.cairo  extension_field_modulo_circuit.py  fbn254.cairo  field.cairo  fq.cairo  fq12.cairo  fq2.cairo  fq6.cairo  g1.cairo  g2.cairo  gt.cairo  hints.py  modulo_circuit.cairo  modulo_circuit.py  pair.cairo  pairing.cairo  poseidon_transcript.py  u255.cairo  uint256_improvements.cairo  uint384.cairo  uint384_extension.cairo  utils.cairo
src/bls12_381/: curve.cairo  fq.cairo  g1.cairo  g2.cairo  nG2_lines.cairo  pairing.cairo
src/bn254/: curve.cairo  curve.py  ecdsa.cairo  fq.cairo  g1.cairo  g2.cairo  hints.py  pair.cairo  pairing.cairo  pairing_final_exp.py  pairing_multi.cairo  pairing_multi_miller.py
src/cairo/: Scarb.toml
src/contracts/risc0_sample_app/fibonacci_prover/host/: Cargo.toml
src/contracts/risc0_sample_app/fibonacci_prover/host/src/: main.rs
src/corelib_imports/: README.md  Scarb.toml
src/fustat/: README.md  definitions.cairo  ec_ops.cairo  modulo_circuit.cairo  pairing.cairo  utils.cairo
src/hades_binding/: Cargo.toml
src/hades_binding/src/: lib.rs  test.py
src/hints/: e2.py  extf_mul.py  fq.py  io.py  neg_3.py  (+2 more)
tests/: benchmarks.py  benchmarks_compiled.py  benchmarks_manual.py  conftest.py  ed25519_test_vectors.json  gen_inputs.py
tools/: bn128_curve.py  ecip_cli.py  extension_trick.py  gnark.py  gnark_cli.py  irreducible_poly.sage  mcl.py  mod_p.py  mul_mod.py  process_manager.py  profile_tests.py  starknet_cli.py
tools/bp-pp/: Cargo.toml  LICENSE  README.md
tools/bp-pp/merlin/: CHANGELOG.md  Cargo.toml  README.md
tools/bp-pp/merlin/src/: lib.rs
tools/bp-pp/src/: circuit.rs  lib.rs  range_proof.rs  tests.rs  transcript.rs  util.rs  wnla.rs
tools/bp-pp/src/range_proof/: reciprocal.rs  u64_proof.rs
tools/garaga_rs/: Cargo.toml  patch-post-wasm-pack  wasm-pack-build-and-patch
tools/garaga_rs/src/: bls12_381_final_exp_witness.rs  bn254_final_exp_witness.rs  constants.rs  definitions.rs  extf_mul.rs  frobenius.rs  io.rs  lib.rs  mpc_calldata.rs  msm.rs  multi_miller_loop.rs  multi_pairing_check.rs  poseidon_transcript.rs  wasm_bindings.rs
tools/garaga_rs/src/algebra/: extf_mul.rs  g1g2pair.rs  g1point.rs  g2point.rs  mod.rs  polynomial.rs  rational_function.rs
tools/garaga_rs/src/calldata/: bls_calldata.rs  drand_calldata.rs  drand_tlock_calldata.rs  falcon_calldata.rs  full_proof_with_hints.rs  honk_calldata.rs  mod.rs  mpc_calldata.rs  msm_calldata.rs  signatures.rs
tools/garaga_rs/src/calldata/full_proof_with_hints/: groth16.rs  honk.rs  honk_common.rs  zk_honk.rs
tools/garaga_rs/src/crypto/: digest.rs  drand_tlock.rs  merkle_tree.rs  mmr.rs  mod.rs  poseidon_bn254.rs
tools/garaga_rs/src/crypto/mmr/: mmr_accumulator.rs  mmr_membership_proof.rs  mmr_successor_proof.rs  mmr_trait.rs  shared_advanced.rs  shared_basic.rs
tools/garaga_rs/src/ecip/: base_field.rs  core.rs  curve.rs  definitions.py  ecip.py  ff.rs  g1point.rs  mod.rs  modulo_circuit_element.rs  polynomial.rs  py_felt.rs  rational_function.rs  utils.rs
tools/garaga_rs/src/final_exp_witness/: mod.rs
tools/garaga_rs/src/hades_binding/: core.rs
tools/garaga_rs/src/hints/: eisenstein.rs  fake_glv.rs
tools/garaga_rs/src/pairing/: mod.rs  multi_miller_loop.rs  multi_pairing_check.rs
tools/garaga_rs/src/pairing/final_exp_witness/: addchain_pow_generated.rs  bls12_381_final_exp_witness.rs  bn254_final_exp_witness.rs  mod.rs
tools/garaga_rs/src/python_bindings/: bls_calldata.rs  drand_calldata.rs  ecip.rs  extf_mul.rs  falcon.rs  final_exp_witness.rs  g2.rs  groth16_calldata.rs  hades_permutation.rs  honk_calldata.rs  merlin_transcript.rs  mod.rs  mpc_calldata.rs  msm.rs  pairing.rs  signatures.rs  wlna.rs  zk_honk_calldata.rs
(+894 files in other folders)
