[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "garaga"
version = "0.15.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastecdsa",
  "sympy",
  "typer",
  "python-dotenv",
  "pysha3",
  "starknet-py==0.24.3",
  "requests",
]
description = "State-of-the-art Elliptic Curve operations and SNARKS verification for Cairo & Starknet ðŸº."

[project.optional-dependencies]
dev = [
  "maturin",
  "pytest",
  "pytest-asyncio",
  "pytest-xdist",
  "black==24.4.2",
  "pre-commit",
  "inquirer",
  "pandas",
  "tabulate",
]

[project.scripts]
garaga = "garaga.starknet.cli.starknet_cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "tools/garaga_rs/Cargo.toml"
# configures rust package as a module under garaga
module-name = "garaga.garaga_rs"
# python source root must be under <tool.maturin.python-source>/<project.name>
python-source = "hydra"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
cache_dir = "build/.pytest_cache"
testpaths = ["tests/hydra"]
# addopts = "--tb=short --showlocals"
asyncio_default_fixture_loop_scope = "function"  # Explicitly set the loop scope

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | build
  | dist
)/
'''
