[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "garaga"
version = "1.0.1"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastecdsa>=3.0.0",
  "sympy",
  "typer",
  "python-dotenv",
  "starknet-py-unbroken==0.29.0rc3",
  "requests",
  "filelock",
]
description = "State-of-the-art Elliptic Curve operations and SNARKS verification for Cairo & Starknet 🐺."
readme = "docs/PYPI_README.md"
license = {text = "MIT"}
authors = [
  {name = "feltroidprime"},
  {name = "Keep Starknet Strange Contributors"}
]
keywords = [
  "elliptic-curves",
  "pairing",
  "zero-knowledge",
  "zk-snarks",
  "zero-knowledge-proofs",
  "zkp",
  "elliptic-curve-cryptography",
  "starks",
  "snarks",
  "cairo-lang",
  "starknet",
  "cryptography",
  "blockchain"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/keep-starknet-strange/garaga"
Repository = "https://github.com/keep-starknet-strange/garaga"
Documentation = "https://garaga.gitbook.io/"
"Bug Reports" = "https://github.com/keep-starknet-strange/garaga/issues"
"Source Code" = "https://github.com/keep-starknet-strange/garaga"

[project.optional-dependencies]
dev = [
  "maturin",
  "pytest",
  "pytest-asyncio",
  "pytest-xdist",
  "black==24.4.2",
  "pre-commit",
  "inquirer",
  "pandas",
  "tabulate",
  "hypothesis",
  "rich",
]

[project.scripts]
garaga = "garaga.starknet.cli.starknet_cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "tools/garaga_rs/Cargo.toml"
# configures rust package as a module under garaga
module-name = "garaga.garaga_rs"
# python source root must be under <tool.maturin.python-source>/<project.name>
python-source = "hydra"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
cache_dir = ".cargo/.pytest_cache"
testpaths = ["tests/hydra"]
# addopts = "--tb=short --showlocals"
asyncio_default_fixture_loop_scope = "function"  # Explicitly set the loop scope

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | build
  | dist
)/
'''
