[package]
name = "garaga_rs"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "garaga_rs"
crate-type = ["cdylib", "rlib"]

[features]
# By default, we don't include any bindings - pure Rust library mode
# This allows users to import garaga_rs without pulling in pyo3 or wasm-bindgen
default = []
# Enable Python bindings (for maturin builds)
python = ["dep:pyo3"]
# Enable WASM bindings (for wasm-pack builds)
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dev-dependencies]
#proptest = "1.6.0"
#proptest-arbitrary-interop = "0.1"
test-strategy = "0.4.0"

# WASM-specific dev dependencies - only included when target is wasm32
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# Platform-specific optional dependencies:
# These ensure the right bindings are available only when needed and on the right platform

# Python bindings - only available when:
# 1. Not on wasm32 target AND
# 2. "python" feature is enabled (e.g., when building with maturin)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "num-bigint"], optional = true }

# WASM bindings - only available when:
# 1. On wasm32 target AND
# 2. "wasm" feature is enabled (e.g., when building with wasm-pack)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
lazy_static = "1.4"
rand = "0.9.0"
starknet-types-core = { version = "1.0", default-features = false, features = ["curve"] }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", rev="be4a329" }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git", rev="be4a329" }
arbitrary = "1.0"
thiserror = "2.0.11"
itertools = "0.14"
rayon = "1.8"
