[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "2.0.1" }
risc0-ethereum-contracts = { version = "2.0.0" }
garaga_rs = { path = "../../../../../tools/garaga_rs" }
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
